# LeRobotHackathonEnv

./: README.md  pyproject.toml
src/lerobothackathonenv/: __init__.py  env.py  tasks.py  types.py
src/lerobothackathonenv/assets/: scene.xml  so101.xml
src/lerobothackathonenv/models/xml/: README.md  so101_reach.xml  so101_tabletop_manipulation.xml  so101_tabletop_manipulation_generated.xml
src/lerobothackathonenv/models/xml/LeRobot_SO101_components/: scene.xml
src/lerobothackathonenv/models/xml/arenas/: table_arena.xml
src/lerobothackathonenv/models/xml/objects/: bottle.xml  bread-visual.xml  bread.xml  can-visual.xml  can.xml  cereal-visual.xml  cereal.xml  door.xml  door_lock.xml  lemon.xml  milk-visual.xml  milk.xml  object-assets.xml  plate-with-hole.xml  round-nut.xml  square-nut.xml
tests/: mj_viewer_rendering.py  test_env.py
