[project]
name = "lerobothackathonenv"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "dm-control>=1.0.34",
    "gymnasium>=1.2.2",
    "mujoco>=3.3.7",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
    "pudb>=2025.1.3",
    "pytest>=9.0.1",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
python-preference = "only-managed"
